adding veggie knife item

--- a/src/main/resources/assets/okramod/lang/en_us.json
+++ b/src/main/resources/assets/okramod/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "item.okramod.okra_seeds": "Okra Seeds",
   "item.okramod.okra": "Okra",
+  "item.okramod.veggie_knife": "Veggie Knife",
 
   "itemGroup.okramod.okra_craft_group": "Okra Craft"
 }
